2008-02-18  Werner Koch  <wk@g10code.com>

	Release 0.10.5 development version.

2008-02-15  Werner Koch  <wk@g10code.com>

	* po/de.po: Describe more explicit on how to start the UI-server.

2008-02-06  Werner Koch  <wk@g10code.com>

	Released 0.10.4 development version.

2007-12-10  Werner Koch  <wk@g10code.com>

	Released 0.10.3 development version.

2007-11-12  Werner Koch  <wk@g10code.com>

	Released 0.10.2 development version.

2007-10-22  Werner Koch  <wk@g10code.com>

	Released 0.10.1 development version.

2007-10-12  Werner Koch  <wk@g10code.com>

	* po/POTFILES.in: Add more files.

2007-10-11  Werner Koch  <wk@g10code.com>

	Released 0.10.0 development version.

2007-10-05  Werner Koch  <wk@g10code.com>

	* doc/: New. 
	* doc/Makefile.am: New.
	* doc/gpgol.texi: New.
	* doc/gpl.texi: New.

2007-09-25  Werner Koch  <wk@g10code.com>

	* configure.ac: Check for libassuan.

2007-09-17  Werner Koch  <wk@g10code.com>

	* autogen.sh (FORCE): Add --force option.

2007-08-13  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac (svn_revision): Update to latest version from gnupg.

2006-12-13  Werner Koch  <wk@g10code.com>

	* po/LINGUAS: Added sv.

2006-12-13  Daniel Nylander <po@danielnylander.se>  (wk)
	
	* po/sv.po: New. 

2006-10-13  Werner Koch  <wk@g10code.com>

	Released 0.9.91.

2006-08-28  Werner Koch  <wk@g10code.com>

	Released 0.9.90.

2006-04-25  Werner Koch  <wk@g10code.com>

	Released 0.9.10.

2006-04-24  Werner Koch  <wk@g10code.com>

	Released 0.9.9.

	* configure.ac: Use M4 macros to get the actual SVN revision.

2006-03-28  Werner Koch  <wk@g10code.com>


2006-03-21  Werner Koch  <wk@g10code.com>

	Released 0.9.7.

2006-01-26  Werner Koch  <wk@g10code.com>

	Released 0.9.6.

2005-12-07  Werner Koch  <wk@g10code.com>

	Released 0.9.5.

2005-12-06  Werner Koch  <wk@g10code.com>

	Released 0.9.4.

2005-12-02  Werner Koch  <wk@g10code.com>

	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): New.

2005-11-30  Werner Koch  <wk@g10code.com>
