@@ -1,3 +1,14 @@
+2008-03-06  Werner Koch  <wk@g10code.com>
+
+	* mimemaker.c (do_mime_sign): Figure out the protocol to use.
+	* engine.c (engine_sign_start): Add new args SENDER and R_PROTOCOL.
+	* engine-assuan.c (op_assuan_sign): Ditto.  Send SENDER command.
+
+2008-03-05  Werner Koch  <wk@g10code.com>
+
+	* main.c (read_options): Insert the debug registry key.
+	(write_options): More debug output.
+
 2008-02-28  Werner Koch  <wk@g10code.com>
 
 	* olflange-dlgs.cpp (GPGOptionsDlgProc): Fix initial setting of
